--- a/public/styles/styles/_sun.scss
+++ b/public/styles/styles/_sun.scss
@@ -7,11 +7,9 @@
     margin: 30px;
     width: 80px;
     height: 80px;
-    z-index: 1;
 }
 .sun-face {
     position: absolute;
-    z-index: 1;
     top: 0;
     left: 0;
     width: 100%;
